--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.app.gymbuztrainer" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.app.gymbuztrainer">
 
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,9 +14,10 @@
 
     <application
         android:name="com.app.gymbuztrainer.BaseApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        tools:replace="allowBackup"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
